syntax = "proto3";
package bs.logger;
option go_package ="/logger";

enum CMDLogger{
	IDNone						= 0;
	IDLogClientInit 			= 1;
	IDLogReq 					= 2;
	IDLogFlush 					= 3;	// 立即写日志到文件中
}

message	LogReq{
	string file_name=1;		// FILE_NAME
	uint32 line_no=2;			// LINE_NO
	uint32 thread_id=3;		// 线程
	bytes class_name=4;		// 日志分类名称
	uint32 log_level=5;		// 日志级别
	bytes content=6;			// 内容
	uint32 server_id=7;		// 来自于哪个服务器
	int64 time_ns=8;			// 发出时间
	bool   show_list=9;		// 是否在界面的日志框中输出
	uint32 src_apptype=10;		// 源AppType
	uint32 src_appid=11;		// 源AppID
	uint64 time_ms_recv=12;	// 接收时间
	string src_appname=13;		// 源App名(一般为进程名)
}

message LogFlush {
	uint32 server_id=1;		// 来自于哪个服务器
	uint32 src_apptype=2;		// 源AppType
	uint32 src_appid=3;		// 源AppID
	string src_appname=4;		// 源App名(一般为进程名)
}